--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Belajar Javascript - NIOMIC</title>
 </head>
 <body>
-	<button type="button" onclick="" name="button">Jalan</button>
+	<button type="button" onclick="tampil()" name="button">Jalan</button>
 	<script type="text/javascript" src="function.js"></script>
 </body>
 </html>
